--- a/.gitignore
+++ b/.gitignore
@@ -69,32 +69,12 @@ app.*.map.json
 **/.pub/
 **/.pub-cache/
 
-# Platform specific
-**/ios/Pods/
-**/ios/Runner.xcworkspace/xcshareddata/
-**/ios/Runner.xcworkspace/xcuserdata/
-**/ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/
-**/ios/Runner.xcodeproj/project.xcworkspace/xcuserdata/
-**/ios/Runner.xcodeproj/xcuserdata/
-
-**/android/.gradle/
-**/android/captures/
-**/android/gradlew
-**/android/gradlew.bat
-**/android/local.properties
-**/android/**/GeneratedPluginRegistrant.java
-**/android/**/GeneratedPluginRegistrant.kt
-
-**/windows/flutter/generated_plugin_registrant.cc
-**/windows/flutter/generated_plugin_registrant.h
-**/windows/flutter/generated_plugins.cmake
-
-**/linux/flutter/generated_plugin_registrant.cc
-**/linux/flutter/generated_plugin_registrant.h
-**/linux/flutter/generated_plugins.cmake
-
-**/macos/Flutter/GeneratedPluginRegistrant.swift
-**/macos/Flutter/ephemeral/
+# Platform specific - EXCLUDE ENTIRE PLATFORM FOLDERS
+/android/
+/ios/
+/linux/
+/macos/
+/windows/
 
 # IDE and editor files
 .vscode/
